...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_quick_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/qr_scan"
        app:layout_constraintEnd_toStartOf="@id/fab_add_event"
        app:layout_constraintBottom_toBottomOf="@id/fab_add_event"
        android:layout_marginEnd="50dp"
        app:backgroundTint="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/events_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/top_menu_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...
