...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20"
        app:srcCompat="@drawable/image_placeholder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_upload_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/card_bg_light_transparent"
        android:textColor="@color/white"
        android:text="@string/upload_an_event_poster"
        android:fontFamily="@font/opensans"
...
