<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1" >

        <item
            android:id="@+id/current_attendance_menu"
            android:title="@string/current_attendance_menu" />
        <item
            android:id="@+id/announcement_menu"
            android:title="@string/announcements" />
        <item
            android:id="@+id/share_qr_menu"
            android:title="@string/share_qr_code" />
    </group>

</menu>